--- a/paicoding-web/src/main/resources-env/prod/application-dal.yml
+++ b/paicoding-web/src/main/resources-env/prod/application-dal.yml
@@ -1,9 +1,9 @@
 
 spring:
   datasource: #单数据源
-    url: jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://mysql:3306/${database.name}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password:
+    password: 123456789Czk.
 
   dynamic: # 动态数据源
     #    primary: master # 这个表示默认的数据源
@@ -32,7 +32,7 @@ spring:
         password:
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
       password:
 
@@ -42,7 +42,7 @@ elasticsearch:
   open: false
   # es集群名称
   clusterName: elasticsearch
-  hosts: 127.0.0.1:9200
+  hosts: es:9200
   userName: elastic
   password: elastic
   # es 请求方式
