--- a/paicoding-web/src/main/resources-env/prod/application-config.yml
+++ b/paicoding-web/src/main/resources-env/prod/application-config.yml
@@ -1,21 +1,21 @@
 view:
   site:
-    websiteName: 技术派
+    websiteName: CodingNinja
     websiteLogoUrl: https://paicoding.com/img/logo.svg
     websiteFaviconIconUrl: https://paicoding.com/img/icon.png
-    contactMeTitle: 联系我 - 小灰飞
-    contactMeWxQrCode: https://-oss.oss-cn-beijing.aliyuncs.com/tech-pai/images/%E5%85%AC%E4%BC%97%E5%8F%B7qrcode.jpg
+    contactMeTitle:
+    contactMeWxQrCode: https://coding-ninja-2025.oss-cn-beijing.aliyuncs.com/codingNinja/wx_qrcode.jpg
     pageSize: 20
     needLoginArticleReadCount: 30 # 需要登录才能阅读的文章阅读次数
     cdnImgStyle:
-    websiteRecord: 备案号:冀ICP备2023036490号-1
+    websiteRecord: 备案号
     wxLoginUrl: http://weixin.qq.com/r/WxwpMefE-rqBraNS90lJ
-    host: https://paicoding.com
-    welcomeInfo: 欢迎来到技术派，戳 <a href="/article/detail/16">技术派社区上线！</a> 了解我们
+    host: https://codingninja555.xyz
+    welcomeInfo: Welcome!!!
     zsxqUrl: ''
     zsxqPosterUrl: ''
-    contactMeStarQrCode: https://-oss.oss-cn-beijing.aliyuncs.com/tech-pai/images/%E5%85%AC%E4%BC%97%E5%8F%B7qrcode.jpg
-    oss: https://-oss.oss-cn-beijing.aliyuncs.com/tech-pai
+    contactMeStarQrCode: https://coding-ninja-2025.oss-cn-beijing.aliyuncs.com/codingNinja/wx_qrcode.jpg
+    oss: https://coding-ninja-2025.oss-cn-beijing.aliyuncs.com/codingNinja
 
 knife4j:
   production: true # 开启屏蔽文档资源
