--- a/paicoding-web/src/main/resources/application.yml
+++ b/paicoding-web/src/main/resources/application.yml
@@ -3,6 +3,11 @@ server:
   port: 8080
   servlet:
     session:
+      cookie:
+        name: SESSION_ID
+        same-site: none #这样才能跨域携带cookie
+        secure: true
+        http-only: true #前端代码拿不到cookie
       timeout: 5m # 设置session的有效期为五分钟
   compression:
     enabled: true # 开启返回结果压缩，减少传输耗时
@@ -30,6 +35,7 @@ spring:
       enabled: true
       max-file-size: 5MB
       max-request-size: 10MB
+
 
 servlet:
   tomcat:
