--- a/paicoding-web/src/main/resources/application.yml
+++ b/paicoding-web/src/main/resources/application.yml
@@ -15,7 +15,7 @@ server:
 
 spring:
   profiles:
-    active: prod
+    active: dev
   config:
     import: application-dal.yml,application-web.yml,application-config.yml,application-image.yml,application-email.yml,application-rabbitmq.yml,application-ai.yml
 
@@ -28,7 +28,7 @@ spring:
       request-timeout:
   liquibase:
     change-log: classpath:liquibase/master.xml
-    enabled: true # 当实际使用的数据库不支持liquibase，如 mariadb 时，将这个参数设置为false
+    enabled: false # 当实际使用的数据库不支持liquibase，如 mariadb 时，将这个参数设置为false
     clear-checksums: true # 每次启动时清除数据库中的checksums，用于开发环境
   servlet:
     multipart:
